[package]
name = "hext"
version = "0.4.1"
authors = ["Brad Alfirevic <brad@genbyte.dev>"]
edition = "2018"
description = "A binary file markup language"
repository = "https://github.com/genuinebyte/hext"
license = "ISC"
keywords = ["binary", "hexadecimal"]
categories = ["encoding", "parsing"]

[dependencies]
bitvec = "0.22.3"
