[package]
name = "hext"
version = "0.4.1"
authors = ["Genevieve <gen@nyble.dev>"]
edition = "2021"
description = "A binary file markup language"
repository = "https://github.com/gennyble/hext"
license = "ISC"
keywords = ["binary", "hexadecimal"]
categories = ["encoding", "parsing"]

[dependencies]
bitvec = "1.0"
