[package]
name = "hxt"
version = "0.1.1"
authors = ["Genevieve <gen@nyble.dev>"]
edition = "2021"
description = "A binary file markup language"
repository = "https://github.com/gennyble/hext"
license = "ISC"
keywords = ["binary", "hexadecimal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
hext = { path = "../hext", version = "0.4" }
getopts = "0.2"
